--- a/css/notice.css
+++ b/css/notice.css
@@ -238,7 +238,7 @@ body {
   background-color: #e5c0a3;
 }
 
-/* 精選商品區 */
+/* 交易須知 */
 .product-section {
   padding: 40px 20px;
   background-color: #f9f9f9;
