--- a/css/product.css
+++ b/css/product.css
@@ -116,6 +116,7 @@ body {
 /* 右側圖標樣式 */
 .navbar-right .icon-link {
     margin-left: 20px;
+    text-decoration: none;
 }
 
 .navbar-right .icon-link img {
@@ -159,74 +160,6 @@ body {
     margin-right: 0;
     border: none;
     pointer-events: none;
-}
-/* 輪播區 */
-.carousel {
-  position: relative;
-  width: 100%;
-  height: 300px; /* 你可以改為 400px 或其他 */
-  overflow: hidden;
-  background-color: #c7d6e2;
-}
-
-.carousel-track {
-  display: flex;
-  transition: transform 0.5s ease-in-out;
-  height: 100%;
-}
-
-.carousel-track img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  flex-shrink: 0;
-}
-
-.carousel-btn {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: rgba(255, 255, 255, 0.6);
-  border: none;
-  font-size: 24px;
-  padding: 10px;
-  cursor: pointer;
-  z-index: 2;
-  color: #542d13;
-}
-
-.carousel-btn.prev {
-  left: 10px;
-}
-
-.carousel-btn.next {
-  right: 10px;
-}
-
-
-.carousel-image.active {
-  display: block;
-}
-
-.carousel-btn {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: rgba(255, 255, 255, 0.6);
-  border: none;
-  font-size: 24px;
-  padding: 10px;
-  cursor: pointer;
-  z-index: 2;
-  color: #542d13;
-}
-
-.carousel-btn.prev {
-  left: 10px;
-}
-
-.carousel-btn.next {
-  right: 10px;
 }
 
 
@@ -369,23 +302,6 @@ body {
   padding: 0;
 }
 
-.favorite.active {
-  color: #e26666; /* 點擊後變紅 */
-}
-.favorite-and-quantity {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  margin-bottom: 15px;
-}
-
-.favorite {
-  font-size: 20px;
-  color: #ccc;
-  cursor: pointer;
-  transition: color 0.3s;
-}
-
 .quantity-input {
   width: 60px;
   padding: 5px;
@@ -420,8 +336,49 @@ body {
   color: white;
   text-align: center;
   padding: 20px 10px;
-  margin-top: 40px;
-  margin-top: auto;
+  margin-top: 0px;
+}
 
+
+
+/* 提示框樣式 */
+.toast-notification {
+    visibility: hidden; /* 預設隱藏 */
+    min-width: 250px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    text-align: center;
+    border-radius: 5px;
+    padding: 16px;
+    position: fixed;
+    z-index: 1000; /* 確保在最上層 */
+    left: 50%;
+    bottom: 30px;
+    transform: translateX(-50%);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    opacity: 0;
+    transition: visibility 0s, opacity 0.5s ease-in-out;
+}
+
+.toast-notification.show {
+    visibility: visible;
+    opacity: 1;
+}
+/* IGFB */
+.icon-link {
+  text-decoration: none;
+}
+
+.icon-link img {
+  width: 24px;
+  vertical-align: middle;
+  transition: transform 0.3s ease, filter 0.3s ease;
+  cursor: pointer;
+}
+
+
+.icon-link img:hover {
+  transform: scale(1.15);      /* 放大 */
+  filter: brightness(1.2);     /* 變亮 */
 }
 
